--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
 			<artifactId>jedis</artifactId>
 			<version>2.8.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
